CSS Modules的应用修改NavHeader

--- a/src/pages/Map/index.module.css
+++ b/src/pages/Map/index.module.css
@@ -1,4 +1,12 @@
-.test {
-  color: red;
-  font-size: 30px;
+.map {
+  height: 100%;
+  padding-top: 45px;
+}
+
+.container {
+  height: 100%;
+}
+
+.map :global(.am-navbar) {
+  margin-top: -45px;
 }
