--- a/src/pages/Map/index.module.css
+++ b/src/pages/Map/index.module.css
@@ -11,7 +11,7 @@
   margin-top: -45px;
 }
 
-/* 覆盖物样式： */
+/* 区、镇的覆盖物样式： */
 .bubble {
   width: 70px;
   height: 70px;
@@ -28,4 +28,42 @@
 
 .name {
   padding: 18px 0 6px 0;
+}
+
+/* 小区的覆盖物样式： */
+
+.rect {
+  height: 20px;
+  line-height: 19px;
+  width: 100px;
+  padding: 0 3px;
+  border-radius: 3px;
+  position: absolute;
+  background: rgba(12, 181, 106, 0.9);
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+.arrow {
+  display: block;
+  width: 0;
+  height: 0;
+  margin: 0 auto;
+  border: 4px solid transparent;
+  border-top-width: 4px;
+  border-top-color: #00a75b;
+}
+
+.housename {
+  display: inline-block;
+  width: 70px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  vertical-align: middle;
+}
+
+.housenum {
+  display: inline-block;
+  width: 20px;
 }
