条件筛选栏组件结构和样式准备

--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -10,3 +10,11 @@
   position: fixed;
   bottom: 0;
 }
+
+.home .am-tab-bar {
+  height: 100%;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
