加载更多房屋列表数据

--- a/src/pages/HouseList/index.module.css
+++ b/src/pages/HouseList/index.module.css
@@ -33,3 +33,10 @@
 .houseItems {
   padding: 0 15px;
 }
+
+.loading {
+  line-height: 120px;
+  text-align: center;
+  height: 110px;
+  background-color: #f6f5f6;
+}
