--- a/src/pages/HouseList/components/Filter/index.module.css
+++ b/src/pages/HouseList/components/Filter/index.module.css
@@ -1,6 +1,7 @@
 .root {
   position: relative;
   z-index: 3;
+  /* height: 40px; */
 }
 
 .mask {
@@ -15,6 +16,8 @@
 
 .content {
   position: relative;
+  /* position: absolute; */
   z-index: 3;
+  /* width: 100%; */
   background-color: #fff;
 }
