--- a/src/pages/Map/index.module.css
+++ b/src/pages/Map/index.module.css
@@ -11,7 +11,6 @@
   margin-top: -45px;
 }
 
-/* 区、镇的覆盖物样式： */
 .bubble {
   width: 70px;
   height: 70px;
@@ -21,7 +20,7 @@
   border-radius: 100%;
   background: rgba(12, 181, 106, 0.9);
   color: #fff;
-  border: 2px solid rgba(255, 255, 255, 0.8);
+  border: rgba(255, 2255, 255, 0.8);
   text-align: center;
   cursor: pointer;
 }
@@ -29,8 +28,6 @@
 .name {
   padding: 18px 0 6px 0;
 }
-
-/* 小区的覆盖物样式： */
 
 .rect {
   height: 20px;
@@ -68,7 +65,6 @@
   width: 20px;
 }
 
-/* 房源列表样式： */
 .houseList {
   position: fixed;
   bottom: 0;
@@ -78,6 +74,7 @@
   transition: all 1s;
   transform: translate3d(0, 330px, 0);
   background: #fff;
+  z-index: 999;
 }
 
 .show {
@@ -119,4 +116,82 @@
   overflow-y: auto;
   height: 100%;
   padding-bottom: 45px;
+}
+
+
+
+.house {
+  height: 120px;
+  position: relative;
+  box-sizing: border-box;
+  justify-content: space-around;
+  padding-top: 18px;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.imgWrap {
+  float: left;
+  width: 106px;
+  height: 80px;
+}
+
+.img {
+  width: 106px;
+  height: 80px;
+}
+
+.content {
+  overflow: hidden;
+  line-height: 22px;
+  padding-left: 12px;
+}
+
+.title {
+  margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  vertical-align: middle;
+  font-size: 15px;
+  color: #394043;
+}
+
+.desc {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  vertical-align: middle;
+  font-size: 12px;
+  color: #afb2b3;
+}
+
+.price {
+  font-size: 12px;
+  color: #fa5741;
+}
+
+.priceNum {
+  font-size: 16px;
+  font-weight: bolder;
+}
+
+.tag {
+  display: inline-block;
+  font-size: 12px;
+  border-radius: 3px;
+  padding: 4px 5px;
+  margin-right: 5px;
+  line-height: 12px;
+}
+.tag1 {
+  color: #39becd;
+  background: #e1f5f8;
+}
+.tag2 {
+  color: #3fc28c;
+  background: #e1f5ed;
+}
+.tag3 {
+  color: #5aabfd;
+  background: #e6f2ff;
 }
